# artemis-video-processor

./: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  server-config
src/: cors.rs  main.rs  utils.rs
