[package]
name = "artemis-video-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "5.1.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
# rocket-multipart-form-data = "0.9.6"
# rocket_contrib = "0.4.11"
# serde = {version= "1.0.152", features = ["derive"]}

